--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="frist-page.css">
+    <link rel="stylesheet" href="home.css">
     <script src="https://kit.fontawesome.com/5196aeeac3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
@@ -13,14 +13,14 @@
     <!--The header html attributes-->
     <header>
         <section class="header-nav">
-            <a href="#" class="logo"><i class="fa-solid fa-house"></i>eventhouse</a>
+            <a href="#" class="logo"><i class="fa-solid fa-house"></i>The Taste</a>
             <nav>
                 <ul>
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Booking</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Topical</a></li>
-                    <li><a href="#">Accessibility</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="Topical.html">Topical</a></li>
+                    <li><a href="accessibility.html">Accessibility</a></li>
                 </ul>
             </nav>
            <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
@@ -32,7 +32,7 @@
         <!-- Wlecome section.-->
         <section class="welcome">
             <div class="welcome-text">
-                <h1>Lorem ipsum dolor sit <br>Lorem ipsum dolor sit amet.</br> Lorem, ipsum dolor.</h1>
+                <h1>Looking for the best of the best?<br>The Taste event house and café:</br> Here to make your dreams reality.</h1>
                 <a href="#learn-more" class="butt">Learn more</a>
             </div>
         </section>
@@ -44,11 +44,11 @@
                 
             </div>
             <div class="about-discribtion">
-                <h2>We provide the best <br>Prooerty for you</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates tempora voluptate, quia quos consequuntur aut.</p>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni eligendi in obcaecati eveniet quam cupiditate.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ex?</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est fuga ea exercitationem repellat obcaecati laboriosam inventore?</p>
+                <h2>We provide the best spaces for you</h2>
+                <p>The Taste event house and café (eta 1997) is an old-time business with new-time ideas.</p>
+                <p>Through the times we have strived to give everyone a space, anytime they need.</p>
+                <p>With our brand new location in the heart of Oslo, we hope to make it a second home for everyone.</p>
+                <p>Now with a new menu and freshly renovated meeting rooms! Look down below for further information and booking.</p>
                 <a href="#contact-admins" class="butt">Contact us</a>
         
         </section>
@@ -58,28 +58,28 @@
         <section class="cards">
 
             <!--Card's Boxes -->
-            <div onclick="location.href='frist-page.html#seminar-hall';" style="cursor:pointer;" class="box">
-                <i class="fa-solid fa-desktop"></i>
-                <h3>Seminar Sal</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, fugit.</p>
-            </div>
-
-            <div onclick="location.href='http://www.example.com';" style="cursor:pointer;" class="box">
-                <i class="fa-regular fa-handshake"></i>
-                <h3>Meeting romms</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, fugit.</p>
-            </div>
-
-            <div onclick="location.href='http://www.example.com';" style="cursor:pointer;" class="box">
-                <i class="fa-solid fa-champagne-glasses"></i>
-                <h3>Party sal</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, fugit.</p>
-            </div>
-
-            <div onclick="location.href='http://www.example.com';" style="cursor:pointer;" class="box">
+            <div onclick="location.href='index.html#café';" style="cursor:pointer;" class="box">
                 <i class="fa-solid fa-utensils"></i>
-                <h3>Restaurant</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, fugit.</p>
+                <h3>The Taste café</h3>
+                <p>Take a look at our café kitchen, catering and casual visits available!</p>
+            </div>
+
+            <div onclick="location.href='index.html#meeting-room';" style="cursor:pointer;" class="box">
+                <i class="fa-regular fa-handshake"></i>
+                <h3>Meeting rooms</h3>
+                <p>Looking to impress your colleagues? Meeting rooms, open for booking now!</p>
+            </div>
+
+            <div onclick="location.href='index.html#party-room';" style="cursor:pointer;" class="box">
+                <i class="fa-solid fa-champagne-glasses"></i>
+                <h3>Party hall</h3>
+                <p>The perfect location for your near and dear, party halls open for booking now!</p>
+            </div>
+
+            <div onclick="location.href='index.html#seminar-hall';" style="cursor:pointer;" class="box">
+                <i class="fa-solid fa-desktop"></i>
+                <h3>Seminar hall</h3>
+                <p>Look at our wonderful seminar hall, open for booking now!</p>
             </div>
 
         </section>
@@ -88,21 +88,22 @@
 
         <section class="conisiting" id="learn-more">
 
-            <div class="activities">
+            <div class="activities" id="café">
                 <div class="activities-img-1" id="activities-info"></div>
                 <div class="activities-text-1" id="activities-info">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore totam voluptates corporis, ipsa sapiente blanditiis, ipsam iure et iste accusantium dolorum explicabo animi nemo modi illum obcaecati a itaque? Sit voluptatibus, sint ratione magnam, ad quo quod, odit culpa nulla autem quasi tempore sequi assumenda placeat nemo ducimus dolorem. Pariatur quaerat deleniti ut, ratione cum animi vero cumque saepe placeat, libero, illum ad rerum? Vitae quibusdam delectus aperiam sed eos incidunt eveniet iusto nemo dignissimos atque laboriosam ipsa, voluptas repellendus corporis ullam? Numquam doloribus cum, beatae molestiae officiis ab reiciendis a in nesciunt error, delectus eaque ipsam? In, voluptatibus incidunt! .</p>
+                    <h4>The Taste café</h4>
+                    <p>Our brand new café, now open, is truly a taste of wonder for everyone. With both vegan and halal options, we have strived to be able to cater to each and every one of our costumers. </p>
                 </div>
             </div>
 
-            <div class="activities">
+            <div class="activities" id="meeting-room">
                 <div class="activities-img-2" id="activities-info"></div>
                 <div class="activities-text-2" id="activities-info">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi cum ea, natus pariatur excepturi omnis provident! Libero cumque alias quidem porro eum vero repudiandae quos ex dolores dolorem eligendi dolore nobis est aliquam laudantium labore, doloremque atque possimus ipsum minima sunt impedit? Doloribus hic, quas corrupti veritatis illum culpa aperiam delectus! Ipsam, nemo voluptatem repudiandae maiores nihil voluptates rerum praesentium perspiciatis blanditiis fuga. Eius quae ab maiores laborum quidem, qui iusto voluptates tempora asperiores, dolorem natus? Harum reprehenderit expedita accusantium ut, sint commodi velit aspernatur natus adipisci id aperiam dignissimos quisquam autem. Veniam velit voluptates suscipit placeat amet sunt voluptatibus?</p>
                 </div>
             </div>
 
-            <div class="activities">
+            <div class="activities" id="party-room">
                 <div class="activities-img-3" id="activities-info"></div>
                 <div class="activities-text-3" id="activities-info">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae ipsam natus incidunt distinctio fuga. Perspiciatis, labore consequatur. Exercitationem ad odio pariatur tenetur cum ipsa nam aperiam optio non iste doloremque sequi esse earum corrupti atque dicta accusamus architecto laborum dolor, nobis eligendi sed tempora distinctio. Neque, totam perspiciatis. Inventore modi blanditiis esse, quos autem hic vitae vero culpa distinctio voluptatum et tempora omnis magnam aliquam nemo dolor id assumenda harum quam possimus reprehenderit ut eligendi totam? Nemo iusto error fugiat neque facere ipsum exercitationem architecto illum, quae sed placeat, dolor eligendi asperiores quos nisi accusamus quam at, dolorem voluptate? Dolorem..</p>
