edited icons to link to example

--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                 <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 000 00 000</a></p>
                 <p class="title-info">Social media</p>
                 <div class="Social-media">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-snapchat"></i></a>
                 </div>
             </div>
 
