--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="overlay">
                     <div class="content">
                         <h2><span class="Wedding">Admin</span></h2>
-                        <h4>Booking</h4>
+                        <h3>Booking</h3>
                         <a href="#">Send Email</a>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                 <div class="overlay">
                     <div class="content">
                         <h2><span class="Restaurant">Manager</span></h2>
-                        <h4>Restaurant</h4>
+                        <h3>Café</h3>
                         <a href="#">Send Email</a>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                 <div class="overlay">
                     <div class="content">
                         <h2><span class="Party">Events admin</span></h2>
-                        <h4>Party sal</h4>
+                        <h3>Party hall</h3>
                         <a href="party.html">Send Email</a>
                     </div>
                 </div>
@@ -154,8 +154,8 @@
             <div class="card" id="meeting">
                 <div class="overlay">
                     <div class="content">
-                        <h2><span class="meeting">Meeting</span></h2>
-                        <h4>Meeting rooms</h4>
+                        <h2><span class="meeting">Organiser</span></h2>
+                        <h3>Meeting rooms</h3>
                         <a href="#">Send Email</a>
                     </div>
                 </div>
@@ -183,10 +183,10 @@
                 <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 000 00 000</a></p>
                 <p class="title-info">Social media</p>
                 <div class="Social-media">
-                    <a href="http://www.example.com/" alt="facebook icon"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://www.example.com/" alt="instagram icon"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://www.example.com/" alt="twitter icon"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="http://www.example.com/" alt="snapchat icon"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-facebook" alt="facebook icon"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-instagram" alt="instagram icon"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-twitter" alt="twitter icon"></i></a>
+                    <a href="http://www.example.com/"><i class="fa-brands fa-snapchat" alt="snapchat icon"></i></a>
                 </div>
             </div>
 
