--- a/booking.html
+++ b/booking.html
@@ -114,10 +114,10 @@
                 <p><i class="fa-solid fa-phone-volume"></i> <a href="#">+47 123 45 678</a></p>
                 <p class="title-info">Social media</p>
                 <div class="Social-media">
-                    <a href="http://www.example.com/"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://www.example.com/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://www.example.com/"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="http://www.example.com/"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="http://www.example.com/" alt="facebook link"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://www.example.com/" alt="instagram link"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://www.example.com/" alt="twitter link"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="http://www.example.com/" alt="snapchat link"><i class="fa-brands fa-snapchat"></i></a>
                 </div>
             </div>
 
