accessibility page updated

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                 <p class="title-info">Social media</p>
                 <div class="Social-media">
                     <a href="http://www.example.com/" alt="facebook link"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://www.example.com/" alt="instagram icon"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://www.example.com/" alt="twitter icon"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="http://www.example.com/" alt="snapchat icon"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="http://www.example.com/" alt="instagram link"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://www.example.com/" alt="twitter link"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="http://www.example.com/" alt="snapchat link"><i class="fa-brands fa-snapchat"></i></a>
                 </div>
             </div>
 
