--- a/booking.html
+++ b/booking.html
@@ -30,6 +30,7 @@
            <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
         </section>
     </header>
+<section class="innhold">
 
     <div class="containers">
         <div class="container1">     
@@ -97,6 +98,9 @@
     
         </div>
     </div>
+
+</section>
+   
    
 <footer>
         <section class="footer-info">
