--- a/accessibility.html
+++ b/accessibility.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Style-header.css">
     <title>Accessibility</title>
 </head>
 <body>
+    <header>
+        <section class="header-nav">
+            <a href="#" class="logo"><i class="fa-solid fa-house"></i>The Taste</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="booking.html">Booking</a></li>
+                    <li><a href="menu.html" class="active">Menu</a></li>
+                    <li><a href="Topical.html">Topical</a></li>
+                    <li><a href="accessibility.html">Accessibility</a></li>
+                </ul>
+            </nav>
+           <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
+        </section>
+    </header>
+
     <h1>
         Accessibility - what have we taken into consideration?
     </h1>
