--- a/Topical.html
+++ b/Topical.html
@@ -16,7 +16,8 @@
 	<h2 class="heading2">Consider the role of algorithms play in your daily life, at home, and at work. Confront your reflection with your group</h2>
 </header>
   <figure class="featured-image-1">
-      <img src="img0.png" alt="Photo by PhonlamaiPhoto's Images on Canva">
+    <!-- this photo was taken from https://www.canva.com/photos/MADQiI5QBes-artificial-intelligence-humanoid-life/ by Ktsi images-->
+      <img src="img0.png" alt="Artificial_intelligence">
    </figure>
    <!--Heading stops-->
    <!--Number 1-->
@@ -28,7 +29,8 @@
   </div>
   </article>
   <figure class="featured-image-2">
-	<img src="img4.png" alt="Photo by bankkgraphy on Canva">
+   <!-- this photo was taken from https://www.canva.com/photos/MAEkVUAwpto-electric-toothbrush/ by vladimirsukhachev--> 
+	<img src="img4.png" alt="Electronic Toothbrush">
  </figure>
  <!--Number 1 stops here-->
  <!--Number 2-->
@@ -40,10 +42,12 @@
   </div>
   </article>
   <figure class="featured-image-3">
-      <img src="img5.png" alt="Photo by  Carlos Castilla on Canva">
+<!-- this photo was taken from (link) by Carlos Castilla-->
+      <img src="img5.png" alt="Man in neural network">
    </figure>
    <!--Number 2 stops here-->
    <!--Number 3-->
+
   <div class="number-3">3</div>
   <article class="article article-3">
     <div class="firstpart">
@@ -52,8 +56,8 @@
     <div class="firstpart">
   </article>
   <figure class="featured-image-4">
-    <!-- this photo was taken from (link) by (photographer)-->
-      <img src="img6.png" alt="Photo by PhonlamaiPhoto's Images on Canva">
+    <!-- this photo was taken from https://www.canva.com/photos/MADmY3buj7s-woman-head-silhouette-ai-concept/ by ismagilov-->
+      <img src="img6.png" alt="Machine Leraning">
    </figure>
    <!--Number 3 stops here-->
    <!--Number 4-->
@@ -65,7 +69,8 @@
     <div class="firstpart">
 </article>
   <figure class="featured-image-1">
-    <img src="img0.png" alt="Photo by PhonlamaiPhoto's Images on Canva">
+    <!-- this photo was taken from https://www.canva.com/photos/MAExc8pLbJw-cute-artificial-intelligence-robot-learning/ by PhonlamaiPhoto's Images-->
+    <img src="img0.png" alt="Robot in a mathematical puzzel">
  </figure>
  <!--Number 4 stops here-->
  <!--Cons-->
