--- a/accessibility.html
+++ b/accessibility.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style-header.css">
+    <script src="https://kit.fontawesome.com/5196aeeac3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Accessibility</title>
 </head>
 <body>
@@ -15,9 +17,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="booking.html">Booking</a></li>
-                    <li><a href="menu.html" class="active">Menu</a></li>
+                    <li><a href="menu.html">Menu</a></li>
                     <li><a href="Topical.html">Topical</a></li>
-                    <li><a href="accessibility.html">Accessibility</a></li>
+                    <li><a href="accessibility.html" class="active">Accessibility</a></li>
                 </ul>
             </nav>
            <div class="menu-toggle"><i class="fas fa-bars" aria-hidden="true"></i></div>
